2008-05-28  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* tests/examples/seek/seek.c: (make_parselaunch_pipeline):
	  Initialise error to NULL as we should.

2008-05-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/adder/gstadder.c: (gst_adder_query_duration),
	(gst_adder_query_latency), (gst_adder_query):
	Implement latency query.

2008-05-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/adder/gstadder.c: (gst_adder_query_duration):
	Correctly resync the iterator if gst_iterator_next() returns
	GST_ITERATOR_RESYNC.

2008-05-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* win32/vs6/libgstpbutils.dsp:
	  Add pbutils-enumtypes.c to sources (#518037).

2008-05-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstaudioclock.c: (gst_audio_clock_init),
	(gst_audio_clock_reset), (gst_audio_clock_get_internal_time):
	* gst-libs/gst/audio/gstaudioclock.h:
	Add method to inform the clock that the time starts from 0 again. We use
	this info to calculate a clock offset so that the time we report in
	internal_time is monotonically increasing, as required by the clock base
	class. Fixes #521761.
	API: GstAudioClock::gst_audio_clock_reset()

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_skew_slaving),
	(gst_base_audio_sink_change_state):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create), (gst_base_audio_src_change_state):
	Reset reported time when we (re)create the ringbuffer.

2008-05-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* ext/alsa/gstalsamixertrack.c:
	  (gst_alsa_mixer_track_update_alsa_capabilities):
	  Make sure playback volumes aren't accidentally overwritten by
	  capture volumes if an alsa mixer track has both playback and
	  capture capabilities: we create two GstMixerTracks in that
	  case, so make sure we query only the alsa capabilities that
	  refer to the type of GstMixerTrack we created from the dual